--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "concurrently": "^5.3.0",
-    "husky": "^5.0.9",
+    "husky": "4.3.6", 
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
   }
