--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "license": "MIT",
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged",
-      "post-commit": "git update-index --again"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "scripts": {
@@ -16,14 +14,13 @@
     "install-dependencies": "yarn run install-ui-packages",
     "install-ui-packages": "cd client && yarn install",
     "serve-dev:ui-local": "cd client && yarn run dev"
-
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "concurrently": "^5.3.0",
-    "husky": "4.3.6", 
     "lint-staged": "^10.5.4",
+    "husky": "4.3.6",
     "prettier": "^2.2.1"
   }
 }
