--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "concurrently": "^5.3.0",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "husky": "4.3.6",
     "prettier": "^2.2.1"
   }
 }
